# Encycloscope-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/: .gitkeep
scripts/: build_dalembert_index.py
src/encycloscope_mcp/: __init__.py  http_streamable.py
src/encycloscope_mcp/core/: __init__.py  config.py  corpus.py
